--- a/week04/Goodie-4-CSSCollapse.html
+++ b/week04/Goodie-4-CSSCollapse.html
@@ -29,6 +29,7 @@
             display: none;
         }
 
+        /* ::before add an element before the label with class toggle -> this element is a contnet styled as polygon */
         input[type=checkbox].hidden + label.toggle::before {
             content:    '';
             display:    inline-block;
